<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.smarthomeclient.MainActivity"
    tools:showIn="@layout/activity_main">


<!--
    <Button
        android:id="@+id/open"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_led"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="98dp" />

    <Button
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close_led"
        android:layout_alignTop="@+id/open"
        android:layout_centerHorizontal="true" />
-->
    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginLeft="60dp"
        >
        <EditText
            android:layout_marginTop="10dp"
            android:id="@+id/editText"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:hint="@string/ip_hint"
            android:maxLength="15">
        </EditText>
        <Button
            android:id="@+id/ip_address"
            android:text="@string/set_ip"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/editText"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:onClick="setIPAddressListener"
            >
        </Button>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/smartButtonsLayout"
            android:orientation="vertical"
            android:layout_below="@id/editText"
            >

            <Button
                android:id="@+id/camera"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="openCameraWebViewActivity"
                android:layout_marginRight="80dp"
                android:text="@string/open_camera"
                android:drawableLeft="@drawable/camera"/>
            <Button
                android:id="@+id/temperature"
                android:layout_width="fill_parent"
                android:layout_marginRight="80dp"
                android:layout_height="wrap_content"
                android:onClick="openTemperatureActivity"
                android:text="@string/open_temperature"
                android:drawableLeft="@drawable/temp" />

            <Button
                android:id="@+id/wet"
                android:layout_width="fill_parent"
                android:layout_marginRight="80dp"
                android:layout_height="wrap_content"
                android:onClick="openWetActivity"
                android:text="@string/open_wet"
                android:drawableLeft="@drawable/wet"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>


